K3d/tqTstTraefik/hostname1/hostname1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hostname1-service
  labels:
    run: hostname1
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: hostname1
