K3d/tqTstTraefik/hostname1/hostname1-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname1-ingress
  labels:
    name: hostname1-myingress
  annotations:
    ingress.kubernetes.io/ingress.class: "traefik"
#    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: tarso.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hostname1-service
            port: 
              number: 80
